[package]
name = "zchronod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zchronod_tools = { version = "0.1.0", path = "../tools" }
zchronod_node_api = {version ="0.1.0", path = "../zchronod_node_api"}
structopt = "0.3.11"
tracing = "0.1.26"
tokio = { version = "1.36.0", features = ["full"] }